--- a/popup.html
+++ b/popup.html
@@ -1,30 +1,46 @@
 <html>
 <head>
 <style>
+body {
+  overflow: hidden;
+  margin: 1px;
+  padding: 0px;
+  background: white;
+}
+#main {
+  cursor: pointer;
+  padding: 1px 3px;
+  font-family: sans-serif;
+  font-size: 0.8em;
+  width: 150px;
+  margin-top: 1px;
+}
 a:link{text-decoration: none}
 a:visited{text-decoration: none}
 a:active{text-decoration: none}
+a:hover{text-decoration: underline}
 a{color: #0776A0}
 </style>
 <script type="text/javascript">
+var resultdiv;
 window.onload = function() {
-	document.getElementById('disable').onclick = disable();
+	document.getElementById('disable').onclick = disable;
+	resultdiv = document.getElementById('result');
 }
 function disable() {
-	chrome.tabs.getSelected(null, function(Tab tab){
-		var domain = tab.url.replace(/\b(https?|ftp):\/\/(?:www\.)?([\-A-Z0-9.]+)(\/[\-A-Z0-9+&@#\/%=~_|!:,.;]*)?(\?[A-Z0-9+&@#\/%=~_|!:,.;]*)?/ig, "$2");
-		if(!localStorage["exceptions"])
-			localStorage["exceptions"] = domain;
+	chrome.extension.sendRequest({"purpose" : "disable"}, function(response) {
+		if(response.result == "good")
+			resultdiv.innerHTML = "Disabled. You need to refresh before it'll take effect.";
 		else
-			localStorage["exceptions"] += ","+domain;
+			resultdiv.innerHTML = "Something went wrong, please try again.";
 	});
 }
 </script>
 </head>
 <body>
-<div id="main" width="100">
-<a id="disable" href="#">Disable current site</a>
-<em>Please <a href="http://arienh4/donate">donate</a> if you can.</em>
-</div>
+<div id="main">
+<a id="disable" href="#">Disable current site</a><br/>
+<em>Please <a href="http://arienh4/donate">donate</a> if you can.</em><br/>
+<div id="result"></div>
 </body>
 </html>
