--- a/popup.html
+++ b/popup.html
@@ -63,7 +63,7 @@ function download() {
 <body>
 <div id="main">
 <a id="disable" href="#">Disable current site</a><br/>
-<a id="download" href="#">Download all rules into the cache.</a><br/>
+<a id="download" href="#">Update cache.</a><br/>
 <em>Please <a href="http://arienh4/donate">donate</a> if you can.</em><br/>
 <div id="result"></div>
 </body>
