--- a/bg.html
+++ b/bg.html
@@ -58,7 +58,7 @@ function listener(request, sender, sendResponse) {
 	}
 	if(request.purpose == "disable") {
 		chrome.tabs.getSelected(null, function(tab) {
-			var disDomain = tab.url.replace(/\b(https?|ftp):\/\/(?:www\.)?([\-A-Z0-9.]+)(\/[\-A-Z0-9+&@#\/%=~_|!:,.;]*)?(\?[A-Z0-9+&@#\/%=~_|!:,.;]*)?/ig, "$2");
+			var disDomain = exDomain(tab.url);
 			console.log("Disabling "+disDomain);
 			if(!localStorage["exceptions"])
 				localStorage["exceptions"] = disDomain;
@@ -91,11 +91,15 @@ function setLocal(array, key) {
 	var string = array.join("@");
 	localStorage[key] = string;
 }
-
+function exDomain(url) {
+	var regex = /\b(https?|ftp):\/\/(?:www\.)?([\-A-Z0-9.]+)(\/[\-A-Z0-9+&@#\/%=~_|!:,.;]*)?(\?[A-Z0-9+&@#\/%=~_|!:,.;]*)?/ig;
+	var match = regex.exec(url);
+	return match[2];
+}
 chrome.tabs.onUpdated.addListener(function(tabId, changeInfo, tab) {
 	if(changeInfo.status != "loading") return;
 	if(tab.url.substr(0,5) != "http:") return;
-	var domain = tab.url.replace(/\b(https?|ftp):\/\/(?:www\.)?([\-A-Z0-9.]+)(\/[\-A-Z0-9+&@#\/%=~_|!:,.;]*)?(\?[A-Z0-9+&@#\/%=~_|!:,.;]*)?/ig, "$2");
+	var domain = exDomain(tab.url);
 	console.log("Removing for "+domain);
 	if(localStorage["exceptions"] && localStorage["exceptions"].indexOf(domain) != -1) return;
 	if(localStorage['common'])
