Added workaround for regex failing, and fixed donate button.

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@ a{color: #0776A0;margin-top:10px}
 <div id="main">
 <a id="disable" href="#">Disable current site</a><br/>
 <a id="download" href="#">Update cache.</a><br/>
-<em>Please <a href="http://arienh4/donate">donate</a> if you can.</em><br/>
+<em>Please <a id="donate" href="#">donate</a> if you can.</em><br/>
 <div id="result"></div>
 </div>
 </body>
