--- a/bg.html
+++ b/bg.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+<script src="jquery-1.4.min.js"></script>
+<script src="base64.js"></script>
 <script src="bg.js"></script>
 </head>
 </html>
