Improved popup.js with jQuery goodness, enable/disable improved.

--- a/popup.html
+++ b/popup.html
@@ -21,12 +21,14 @@ a:active{text-decoration: none}
 a:hover{text-decoration: underline}
 a{color: #0776A0;margin-top:10px}
 </style>
+<script type="text/javascript" src="jquery-1.4.min.js"></script>
 <script type="text/javascript" src="popup.js"></script>
 </head>
 <body>
 <div id="main">
-<a id="xable" href="#">Disable current site</a><br/>
-<a id="download" href="#">Update cache.</a><br/>
+<a id="disable" href="#">Disable current site<br/></a>
+<a id="enable" href="#">Enable current site<br/></a>
+<a id="download" href="#">Update cache</a><br/>
 <em>Please <a id="donate" href="#">donate</a> if you can.</em><br/>
 <div id="result"></div>
 </div>
