--- a/bg.html
+++ b/bg.html
@@ -2,6 +2,7 @@
 <head>
 <script src="jquery-1.4.min.js"></script>
 <script src="base64.js"></script>
+<script src="helpers.js"></script>
 <script src="bg.js"></script>
 </head>
 </html>
