Changed privacy mode to live mode and reversed process.

--- a/popup.html
+++ b/popup.html
@@ -27,12 +27,16 @@ a{color: #0776A0;margin-top:10px}
 </head>
 <body>
 <div id="main">
-<a id="disable" href="#" class="hide">Disable current site<br/></a>
-<a id="enable" href="#" class="hide">Enable current site<br/></a>
-<a id="download" href="#">Update cache</a><br/>
-<a id="enableprivacy" href="#" class="hide">Enable privacy mode<br/></a>
-<a id="disableprivacy" href="#" class="hide">Disable privacy mode<br/></a>
-<em><a id="donate" href="#">Please donate if you can.</a></em><br/>
+<a id="disable" href="#" class="hide">Disable current site</a>
+<a id="enable" href="#" class="hide">Enable current site</a>
+<br/>
+<a id="download" href="#">Update cache</a>
+<br/>
+<a id="enable2" href="#" class="hide">Enable privacy mode</a>
+<a id="disable2" href="#" class="hide">Disable privacy mode</a>
+<br/>
+<em><a id="donate" href="#">Please donate if you can.</a></em>
+<br/>
 <div id="result"></div>
 </div>
 </body>
