Added live icon and removed unnecessary function for the icon.

--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,7 @@ a{color: #0776A0;margin-top:10px}
 <div id="main">
 <a id="disable" href="#" class="hide">Disable current site</a>
 <a id="enable" href="#" class="hide">Enable current site</a>
-<br/>
+<br id="xable"/>
 <a id="download" href="#">Update cache</a>
 <br/>
 <a id="enable2" href="#" class="hide">Enable privacy mode</a>
