Added javascript option and modified the injection.

--- a/popup.html
+++ b/popup.html
@@ -12,10 +12,9 @@ body {
   padding: 1px 3px;
   font-family: sans-serif;
   font-size: 0.8em;
-  width: 150px;
+  width: 143px;
   margin-top: 1px;
 }
-.hide {display: none;}
 a:link{text-decoration: none}
 a:visited{text-decoration: none}
 a:active{text-decoration: none}
@@ -27,15 +26,17 @@ a{color: #0776A0;margin-top:10px}
 </head>
 <body>
 <div id="main">
-<a id="disable" href="#" class="hide">Disable current site</a>
-<a id="enable" href="#" class="hide">Enable current site</a>
+<a id="site" href="#">Loading...</a>
 <br id="xable"/>
 <a id="download" href="#">Update cache</a>
 <br/>
-<a id="enable2" href="#" class="hide">Enable privacy mode</a>
-<a id="disable2" href="#" class="hide">Disable privacy mode</a>
+<a id="privacy" href="#">Loading...</a>
 <br/>
-<em><a id="donate" href="#">Please donate if you can.</a></em>
+<a id="javascript" href="#">Loading...</a>
+<br/>
+<a id="faq" href="#">For more info, click here</a>
+<br/>
+<em><a id="donate" href="#">Please donate if you can</a></em>
 <br/>
 <div id="result"></div>
 </div>
